fix overflow articles(may be)

--- a/src/components/articles/articles.module.css
+++ b/src/components/articles/articles.module.css
@@ -3,7 +3,14 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100%;
     padding-bottom: 100px;
+    overflow-y: scroll;
+}
+
+.articles::-webkit-scrollbar
+{
+    display: none;
 }
 
 .articles_theme_black
